--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>MuJoCo Web</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="h-full m-0 border-4 border-red-500">
+    <div id="root" class="h-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
