Remove unnecessary styles and simplify layout in index.html and CSS files

--- a/mujoco_web/index.html
+++ b/mujoco_web/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MuJoCo Web</title>
   </head>
-  <body class="h-full m-0 border-4 border-red-500">
+  <body>
     <div id="root" class="h-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
